# login_auth_app

./: .env  .gitignore  README.md  html_shortcut.py  pyproject.toml  users.db
src/: docker-compose.yml
src/backend/: app.py
src/backend/templates/: error.html  index.html  success.html
src/login_auth_app/: .env  Dockerfile  app.py  docker-compose.yml  main.py  requirements.txt
src/login_auth_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/login_auth_app/backend/: Dockerfile  app.py
src/login_auth_app/backend/templates/: login.html
src/login_auth_app/templates/: login.html  success.html
